# takeover

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
takeover/: __main__.py  gamelogic.py  takeover.py  utils.py
takeover/resources/: help.txt  names.txt  positions.txt  welcome.txt
